--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_API_URL=http://evm-indexer-monitor-be.click
+VITE_API_URL=https://evm-indexer-monitor-be.click
 VITE_BLOCK_RANGE_CONFIG=prod_blocks_range
